inception-of-things/p2/confs/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-iot-p2
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  defaultBackend:
    service:
      name: app-three
      port:
        number: 80
  rules:
  - host: "app1.com"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-one
              port:
                number: 80
  - host: "app2.com"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-two
              port:
                number: 80
  # - http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: app-three
  #           port:
  #             number: 80
